--- a/vue/vue-projects-demo/bs-pc-responsive/package.json
+++ b/vue/vue-projects-demo/bs-pc-responsive/package.json
@@ -12,7 +12,11 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.3",
+    "lodash-es": "^4.17.21",
+    "swiper": "^5.4.5",
+    "vee-validate": "^3.4.11",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
